# minecraft-assets-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: rustdoc.yml  tests.yml
minecraft_assets/: all.html  index.html  sidebar-items.js
minecraft_assets/api/: constant.MINECRAFT_NAMESPACE.html  enum.Error.html  enum.ResourceCategory.html  enum.ResourceKind.html  index.html  sidebar-items.js  struct.AssetPack.html  struct.FileSystemResourceProvider.html  struct.ModelIdentifier.html  (+7 more)
src/: lib.rs
syn/: all.html  enum.BinOp.html  enum.Expr.html  index.html  struct.Constraint.html  struct.DeriveInput.html  struct.ExprArray.html  struct.ExprAssign.html  struct.ExprAssignOp.html  struct.ExprAsync.html  struct.ExprAwait.html  struct.ExprBinary.html  struct.ExprBlock.html  struct.ExprBox.html  struct.ExprBreak.html  struct.ExprCall.html  struct.ExprCast.html  struct.ExprClosure.html  struct.ExprContinue.html  struct.ExprField.html  struct.ExprForLoop.html  struct.ExprGroup.html  struct.ExprIf.html  struct.ExprIndex.html  struct.ExprLet.html  struct.ExprLoop.html  struct.ExprMacro.html  struct.ExprMatch.html  struct.ExprMethodCall.html  struct.ExprParen.html  struct.ExprRange.html  struct.ExprReference.html  struct.ExprRepeat.html  struct.ExprReturn.html  struct.ExprStruct.html  struct.ExprTry.html  struct.ExprTryBlock.html  struct.ExprTuple.html  struct.ExprType.html  struct.ExprUnary.html  (+3 more)
tests/: api.rs  blockstates.rs  models.rs  setup.sh  v1_14_4.rs
(+111 files in other folders)
