[package]
name = "minecraft-assets"
version = "0.0.6"
edition = "2021"
description = "Parsing Minecraft asset files and resource packs in Rust"
repository = "https://github.com/BGR360/minecraft-assets-rs"
homepage = "https://github.com/BGR360/minecraft-assets-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "minecraft", "assets", "resource-pack"]
categories = ["game-development", "parsing", ]
exclude = [
    "tests/*",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
assert_matches = "1"
maplit = "1"

[features]

default = []

# Enables the integration tests in the `tests/` directory.
# These tests require fetching the `minecraft-assets` submodule.
tests = []
